[gd_scene load_steps=3 format=3 uid="uid://c5ey1jk06asiq"]

[ext_resource type="Theme" uid="uid://dqjvrt5nrtwn1" path="res://resources/themes/kalulu_theme.tres" id="1_0hqng"]
[ext_resource type="Script" path="res://sources/menus/components/password_visualizer.gd" id="1_mxw25"]

[node name="PasswordVisualizer" type="HBoxContainer"]
offset_right = 668.0
offset_bottom = 220.0
theme_override_constants/separation = 46
script = ExtResource("1_mxw25")

[node name="Panel1" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_0hqng")
metadata/_edit_use_anchors_ = true

[node name="Icon1" type="TextureRect" parent="Panel1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Panel2" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_0hqng")
metadata/_edit_use_anchors_ = true

[node name="Icon2" type="TextureRect" parent="Panel2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Panel3" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_0hqng")
metadata/_edit_use_anchors_ = true

[node name="Icon3" type="TextureRect" parent="Panel3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 2
stretch_mode = 4
